Cleanup, comments
Changed how app starts up, now initial file loaded by default

fixed: 
looking ahead wasn't working properly with the new wrap
communication of food location (still doesn't do anything with the message though)